@@ -1,3 +1,7 @@
+2004-09-21  Jerry James  <james@xemacs.org>
+
+	* itimer.el (start-itimer): Fix my bungling of Martin's intentions.
+
 2004-09-20  Martin Buchholz <martin@xemacs.org>
 
 	* itimer.el (set-itimer-name): New function.
